Fix multi selects broken in Internet Explorer 10 by updating to `z3c.form 3.2.1`.

--- a/src/icemac/addressbook/browser/resources/css/form.css
+++ b/src/icemac/addressbook/browser/resources/css/form.css
@@ -165,8 +165,3 @@ form .widget .ui-selectable li img {
     margin-left: auto;
     margin-right: auto;
 }
-
-/* Fix IE 10 to not render helper fields hidden in all other browsers. */
-#IcemacAddressbookPersonPerson_0-widgets-IcemacAddressbookPersonPerson_0-keywords-toDataContainer {
-    display: none;
-}
